trunk/Archive2/de/9d09ac4ed1a247/output
main.cpp: In instantiation of 'bool Tuple<T, n>::operator>(const Tuple<T, n>&) const [with T = int; int n = 5]':
main.cpp:40:16:   required from here
main.cpp:26:4: error: increment of member 'Tuple<int, 5>::data' in read-only object
    ++data; ++t.data;
    ^
main.cpp:26:12: error: increment of member 'Tuple<int, 5>::data' in read-only object
    ++data; ++t.data;
            ^
